--- a/charts/prometheus-operator-crds/Chart.yaml
+++ b/charts/prometheus-operator-crds/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 type: application
-version: 20.0.1
+version: 20.0.2
 name: prometheus-operator-crds
 icon: https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png
 description: |
@@ -9,6 +9,7 @@ description: |
 keywords:
   - prometheus
   - crds
+# renovate: github=prometheus-operator/prometheus-operator
 appVersion: v0.82.0
 kubeVersion: ">=1.16.0-0"
 sources:
