--- a/renovate.json
+++ b/renovate.json
@@ -120,7 +120,7 @@
           "name": "Updating Chart version",
           "filePatterns": ["/^({{#each (distinct (lookupArray upgrades \"packageFileDir\"))}}{{{.}}}{{#unless @last}}|{{/unless}}{{/each}})/Chart\\.(yaml|yml)$/"],
           "matchStrings": ["(?:^|\\n)version:\\s\"?(?<version>\\d+\\.\\d+\\.\\d+)\"?(?:$|\\n)"],
-          "bumpType": "major"
+          "bumpType": "{{#if isPatch}}patch{{else}}major{{/if}}"
         }
       ]
     }
