--- a/.github/workflows/renovate-custom-hooks.yaml
+++ b/.github/workflows/renovate-custom-hooks.yaml
@@ -63,6 +63,8 @@ jobs:
           GITHUB_HEAD_REF: ${{ github.head_ref }}
         #language=bash
         run: |
+          set -x
+          
           # Define the target directory
           TARGET_DIR="$CHART"
           
@@ -96,7 +98,7 @@ jobs:
             base64 -w 0 <"$file" > "$TMP_CONTENT_FILE"
           
             jq --arg path "$file" --slurpfile content "$TMP_CONTENT_FILE" \
-            '.additions += [{"path": $path, "contents": ($content[0])}]' "$FILE_CHANGES_JSON_FILE" > "$FILE_CHANGES_JSON_FILE.tmp"
+            '.additions += [{"path": $path, "contents": $content[0] }]' "$FILE_CHANGES_JSON_FILE" > "$FILE_CHANGES_JSON_FILE.tmp"
           
             mv "$FILE_CHANGES_JSON_FILE.tmp" "$FILE_CHANGES_JSON_FILE"
             rm "$TMP_CONTENT_FILE"
