--- a/.github/workflows/renovate-custom-hooks.yaml
+++ b/.github/workflows/renovate-custom-hooks.yaml
@@ -97,7 +97,7 @@ jobs:
             TMP_CONTENT_FILE=$(mktemp)
             base64 -w 0 <"$file" > "$TMP_CONTENT_FILE"
           
-            jq --arg path "$file" --slurpfile content "$TMP_CONTENT_FILE" \
+            jq --arg path "$file" --rawfile content "$TMP_CONTENT_FILE" \
             '.additions += [{"path": $path, "contents": $content[0] }]' "$FILE_CHANGES_JSON_FILE" > "$FILE_CHANGES_JSON_FILE.tmp"
           
             mv "$FILE_CHANGES_JSON_FILE.tmp" "$FILE_CHANGES_JSON_FILE"
