[CI] fix renovate post-hook action with larger files
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/.github/workflows/renovate-custom-hooks.yaml
+++ b/.github/workflows/renovate-custom-hooks.yaml
@@ -98,7 +98,7 @@ jobs:
             base64 -w 0 <"$file" > "$TMP_CONTENT_FILE"
           
             jq --arg path "$file" --rawfile content "$TMP_CONTENT_FILE" \
-            '.additions += [{"path": $path, "contents": $content[0] }]' "$FILE_CHANGES_JSON_FILE" > "$FILE_CHANGES_JSON_FILE.tmp"
+            '.additions += [{"path": $path, "contents": $content }]' "$FILE_CHANGES_JSON_FILE" > "$FILE_CHANGES_JSON_FILE.tmp"
           
             mv "$FILE_CHANGES_JSON_FILE.tmp" "$FILE_CHANGES_JSON_FILE"
             rm "$TMP_CONTENT_FILE"
