[CI] fix renovate post-hook action with larger files (#5762)

--- a/.github/workflows/renovate-custom-hooks.yaml
+++ b/.github/workflows/renovate-custom-hooks.yaml
@@ -63,6 +63,8 @@ jobs:
           GITHUB_HEAD_REF: ${{ github.head_ref }}
         #language=bash
         run: |
+          set -x
+          
           # Define the target directory
           TARGET_DIR="$CHART"
           
@@ -95,8 +97,8 @@ jobs:
             TMP_CONTENT_FILE=$(mktemp)
             base64 -w 0 <"$file" > "$TMP_CONTENT_FILE"
           
-            jq --arg path "$file" --slurpfile content "$TMP_CONTENT_FILE" \
-            '.additions += [{"path": $path, "contents": ($content[0])}]' "$FILE_CHANGES_JSON_FILE" > "$FILE_CHANGES_JSON_FILE.tmp"
+            jq --arg path "$file" --rawfile content "$TMP_CONTENT_FILE" \
+            '.additions += [{"path": $path, "contents": $content }]' "$FILE_CHANGES_JSON_FILE" > "$FILE_CHANGES_JSON_FILE.tmp"
           
             mv "$FILE_CHANGES_JSON_FILE.tmp" "$FILE_CHANGES_JSON_FILE"
             rm "$TMP_CONTENT_FILE"
