[CI] fix renovate auto merge
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -151,7 +151,7 @@ jobs:
           private-key: ${{ secrets.APP_RENOVATE_HELPER_PRIVATE_KEY }}
 
       - name: Approve PR
-        run:
+        run: |
           gh pr review ${{ github.event.pull_request.number }} --approve --repo "${{ github.repository }}"
           gh pr merge ${{ github.event.pull_request.number }} --admin --squash --repo "${{ github.repository }}" --match-head-commit "${{ github.event.pull_request.head.sha }}" --delete-branch
         env:
