--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -911,7 +911,8 @@ alertmanager:
       repository: prometheus/alertmanager
       tag: v0.28.1
       sha: ""
-
+      pullPolicy: IfNotPresent
+    
     ## If true then the user will be responsible to provide a secret with alertmanager configuration
     ## So when true the config part will be ignored (including templateFiles) and the one in the secret will be used
     ##
@@ -3978,6 +3979,7 @@ prometheus:
       repository: prometheus/prometheus
       tag: v3.4.1
       sha: ""
+      pullPolicy: IfNotPresent
 
     ## Tolerations for use with node taints
     ## ref: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
