[prometheus-nginx-exporter] Add relabeling in service monitor
Signed-off-by: aldi.j <aldi.jayadi222@gmail.com>

--- a/charts/prometheus-nginx-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-nginx-exporter/templates/servicemonitor.yaml
@@ -27,6 +27,10 @@ spec:
       metricRelabelings:
       {{ toYaml .Values.serviceMonitor.metricRelabelings | indent 4 }}
       {{- end }}
+      {{- if .Values.serviceMonitor.relabelings }}
+      relabelings:
+      {{ toYaml .Values.serviceMonitor.relabelings | indent 4 }}
+      {{- end }}
   selector:
     matchLabels:
       {{- include "prometheus-nginx-exporter.selectorLabels" . | indent 6 }}
