[kube-prometheus-stack] add additionalLabels for alertmanager and prometheus (#5632)

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -394,6 +394,10 @@ alertmanager:
   ##
   annotations: {}
 
+  ## Additional labels for Alertmanager
+  ##
+  additionalLabels: {}
+
   ## Api that prometheus will use to communicate with alertmanager. Possible values are v1, v2
   ##
   apiVersion: v2
@@ -3380,6 +3384,10 @@ prometheus:
   ## Annotations for Prometheus
   ##
   annotations: {}
+
+  ## Additional labels for Prometheus
+  ##
+  additionalLabels: {}
 
   ## Configure network policy for the prometheus
   networkPolicy:
