[ci] enable auto merge for kube-prometheus-stack
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -102,10 +102,19 @@
       "enabled": true,
       "matchFileNames": [
         ".github/workflows/**",
+        "charts/kube-prometheus-stack/**",
         "charts/prometheus-operator-crds/**"
       ],
       "schedule": null,
       "labels": ["dependencies", "dependencies/auto-merge"]
+    },
+    {
+      "matchDatasources": [
+        "git-refs"
+      ],
+      "schedule": [
+        "* * * * 5"
+      ]
     },
     {
       "enabled": true,
