add "ct lint --use-helmignore"
Signed-off-by: TheRealNoob <mike1118@live.com>

--- a/.github/linters/ct.yaml
+++ b/.github/linters/ct.yaml
@@ -15,4 +15,5 @@ github-groups: true
 helm-extra-args: --timeout 600s
 remote: origin
 target-branch: main
+use-helmignore: true
 validate-maintainers: false
