[ci] add rebaseWhen option in renovate.json
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,7 @@
   "suppressNotifications": ["prEditedNotification"],
   "dependencyDashboardApproval": false,
   "labels": ["dependencies"],
+  "rebaseWhen": "behind-base-branch",
   "customManagers": [
     {
       "customType": "regex",
