--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -98,6 +98,11 @@ tolerations: []
 
 affinity: {}
 
+# Additional Annotations and Labels for Deployment
+deployment:
+  annotations: {}
+  labels: {}
+
 # Extra environment variables
 extraEnv: []
 
