Be able to change images for most of the kube-prometheus-stack components
Signed-off-by: Jan Stárek <jan.starek@ysoft.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1218,6 +1218,16 @@ grafana:
   enabled: true
   namespaceOverride: ""
 
+  image:
+    # -- The Docker registry
+    registry: docker.io
+    # -- Docker image repository
+    repository: grafana/grafana
+    # Overrides the Grafana image tag whose default is the grafana chart appVersion
+    tag: ""
+    sha: ""
+    pullPolicy: IfNotPresent
+
   ## ForceDeployDatasources Create datasource configmap even if grafana deployment has been disabled
   ##
   forceDeployDatasources: false
@@ -2420,6 +2430,15 @@ kubeStateMetrics:
 ##
 kube-state-metrics:
   namespaceOverride: ""
+
+  image:
+    registry: registry.k8s.io
+    repository: kube-state-metrics/kube-state-metrics
+    # If unset use the version from sub-chart .Charts.appVersion
+    tag: ""
+    sha: ""
+    pullPolicy: IfNotPresent
+
   rbac:
     create: true
   releaseLabel: true
@@ -2515,6 +2534,15 @@ nodeExporter:
 ##
 prometheus-node-exporter:
   namespaceOverride: ""
+
+  image:
+    registry: quay.io
+    repository: prometheus/node-exporter
+    # Overrides the image tag whose default is in subchart {{ printf "v%s" .Chart.AppVersion }}
+    tag: ""
+    pullPolicy: IfNotPresent
+    digest: ""
+
   podLabels:
     ## Add the 'node-exporter' label to be used by serviceMonitor to match standard common usage in rules and grafana dashboards
     ##
