--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -138,7 +138,7 @@ spec:
 {{- end }}
 {{- with .Values.prometheus.prometheusSpec.scrapeProtocols }}
   scrapeProtocols:
-    {{- tpl (toYaml . | nindent 4) $ }}
+    {{- toYaml . | nindent 4 }}
 {{- end }}
 {{- if .Values.prometheus.prometheusSpec.scrapeTimeout }}
   scrapeTimeout: {{ .Values.prometheus.prometheusSpec.scrapeTimeout }}
