[kube-prometheus-stack] Allow renovate to bump patch versions from prometheus-operator
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -93,6 +93,7 @@
       ]
     },
     {
+      "description": "Disable automerge for all major updates.",
       "enabled": true,
       "matchUpdateTypes": ["major"],
       "automerge": false,
@@ -100,11 +101,15 @@
       "labels": ["dependencies"]
     },
     {
+      "description": "Opt-in to automerge updates charts.",
       "enabled": true,
       "matchFileNames": [
         ".github/workflows/**",
         "charts/kube-prometheus-stack/**",
-        "charts/prometheus-operator-crds/**"
+        "charts/prometheus-operator-crds/**",
+        "charts/prometheus-windows-exporter/**",
+        "charts/jiralert/**",
+        "charts/prom-label-proxy/**"
       ],
       "schedule": null,
       "labels": ["dependencies", "dependencies/auto-merge"]
@@ -118,6 +123,7 @@
       ]
     },
     {
+      "description": "Prometheus Operator minor updates should result in a major bump of the chart version.",
       "enabled": true,
       "matchFileNames": [
         "charts/prometheus-operator-crds/**"
@@ -132,6 +138,19 @@
           "matchStrings": ["(?:^|\\n)version:\\s\"?(?<version>\\d+\\.\\d+\\.\\d+)\"?(?:$|\\n)"],
           "bumpType": "{{#if (or isPinDigest isPatch)}}patch{{else}}major{{/if}}"
         }
+      ]
+    },
+    {
+      "description": "disable prometheus-operator major and minor updates for charts/prometheus-operator-crds",
+      "enabled": false,
+      "matchFileNames": [
+        "charts/prometheus-operator-crds/**"
+      ],
+      "matchPackageNames": [
+        "prometheus-operator/prometheus-operator"
+      ],
+      "matchUpdateTypes": [
+        "major", "minor"
       ]
     }
   ]
