--- a/charts/kube-prometheus-stack/Chart.yaml
+++ b/charts/kube-prometheus-stack/Chart.yaml
@@ -31,9 +31,8 @@ name: kube-prometheus-stack
 sources:
   - https://github.com/prometheus-community/helm-charts
   - https://github.com/prometheus-operator/kube-prometheus
-version: 75.3.1
-
-# Please do not add a renovate hint here, since appVersion updates involves manual tasks
+version: 75.3.2
+# renovate: github=prometheus-operator/prometheus-operator
 appVersion: v0.83.0
 kubeVersion: ">=1.25.0-0"
 home: https://github.com/prometheus-operator/kube-prometheus
