chore: enable automerging prometheus-nats-epxorter updates
Signed-off-by: Mikhail Naletov <okgolove@markeloff.net>

--- a/renovate.json
+++ b/renovate.json
@@ -104,7 +104,8 @@
       "matchFileNames": [
         ".github/workflows/**",
         "charts/kube-prometheus-stack/**",
-        "charts/prometheus-operator-crds/**"
+        "charts/prometheus-operator-crds/**",
+        "charts/prometheus-nats-exporter/**"
       ],
       "schedule": null,
       "labels": ["dependencies", "dependencies/auto-merge"]
