--- a/charts/prometheus-smartctl-exporter/values.yaml
+++ b/charts/prometheus-smartctl-exporter/values.yaml
@@ -18,6 +18,10 @@ common:
     smartctl_location: /usr/sbin/smartctl
     collect_not_more_than_period: 120s
 
+extraArgs:
+  # Add extra arguments to the smartctl exporter
+  # smartctl.powermode-check: never
+
 serviceMonitor:
   enabled: false
   # Specify namespace to load the monitor if not in the same namespace
